# final-project-lightning_mcteam

./: Collaboration.md  Flow_Chart.drawio  README.md  Rough_draft.drawio  pyproject.toml
examples/: example.py  main.py  tempCodeRunnerFile.py
src/BEM/: __init__.py
tests/: functions_tests.py  test_functions.py
